
find_program(PERL_EXECUTABLE NAMES perl)

set(HNOBJECT_DEFINES )
set(HNOBJECT_FILES )

list(APPEND HNOBJECT_DEFINES "HNOBJECT_CMAKE")

file(GLOB HNOBJECT_HEADERS ${CMAKE_CURRENT_LIST_DIR}/*.*h)
file(GLOB HNOBJECT_SOURCES ${CMAKE_CURRENT_LIST_DIR}/*.*c)
list(REMOVE_ITEM HNOBJECT_SOURCES ${CMAKE_CURRENT_LIST_DIR}/HnFTypeArray.cc)
list(REMOVE_ITEM HNOBJECT_SOURCES ${CMAKE_CURRENT_LIST_DIR}/HnClassArray.cc)
list(REMOVE_ITEM HNOBJECT_SOURCES ${CMAKE_CURRENT_LIST_DIR}/HnClassArraySt.c)
list(APPEND HNOBJECT_SOURCES ${CMAKE_CURRENT_LIST_DIR}/HnProperties.cc)
list(APPEND HNOBJECT_SOURCES ${CMAKE_CURRENT_LIST_DIR}/HnString.cc)
list(APPEND HNOBJECT_HEADERS ${CMAKE_CURRENT_LIST_DIR}/HnProperties.hh)
list(APPEND HNOBJECT_HEADERS ${CMAKE_CURRENT_LIST_DIR}/HnString.hh)
list(APPEND HNOBJECT_FILES ${HNOBJECT_HEADERS})
list(APPEND HNOBJECT_FILES ${HNOBJECT_SOURCES})
list(APPEND HNOBJECT_HEADERS ${CMAKE_CURRENT_LIST_DIR}/HnFTypeArray.cc)
list(APPEND HNOBJECT_HEADERS ${CMAKE_CURRENT_LIST_DIR}/HnClassArray.cc)

set_property(SOURCE "${CMAKE_CURRENT_LIST_DIR}/HnProperties.cc" PROPERTY GENERATED TRUE)
set_property(SOURCE "${CMAKE_CURRENT_LIST_DIR}/HnProperties.hh" PROPERTY GENERATED TRUE)
set_property(SOURCE "${CMAKE_CURRENT_LIST_DIR}/HnString.cc" PROPERTY GENERATED TRUE)
set_property(SOURCE "${CMAKE_CURRENT_LIST_DIR}/HnString.hh" PROPERTY GENERATED TRUE)

add_custom_target(perl_obj2ptr
    ${CMAKE_COMMAND} -E touch ${CMAKE_CURRENT_LIST_DIR}/../utils/obj2ptr
    COMMENT "perl_obj2ptr"
)

add_custom_command(
    TARGET perl_obj2ptr
    COMMAND ${PERL_EXECUTABLE}
    ARGS ${CMAKE_CURRENT_LIST_DIR}/../utils/obj2ptr HnStringObj.hh
    COMMENT "perl_obj2ptr_string"
    WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
)

add_custom_command(
    TARGET perl_obj2ptr
    COMMAND ${PERL_EXECUTABLE}
    ARGS ${CMAKE_CURRENT_LIST_DIR}/../utils/obj2ptr HnPropertiesObj.hh
    COMMENT "perl_obj2ptr_properties"
    WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
)

add_library(HnObject ${HNOBJECT_LINKAGE} ${HNOBJECT_FILES})
add_dependencies(HnObject perl_obj2ptr)
target_compile_definitions(HnObject PRIVATE ${HNOBJECT_DEFINES})
target_compile_features(HnObject PRIVATE cxx_std_14)
target_include_directories(HnObject PRIVATE ${PROJECT_BINARY_DIR})
target_include_directories(HnObject PRIVATE ${CMAKE_CURRENT_LIST_DIR})
target_include_directories(HnObject PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../include)
#set_target_properties(HnObject PROPERTIES PUBLIC_HEADER "${HNOBJECT_HEADERS}")
install(TARGETS HnObject)
install(FILES ${HNOBJECT_HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/HnSRTree)

